FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20160116:
AUTHOR: mat@FreeBSD.org

  During extraction of the do-patch target into a separate script, the "-d
  PATCH_WRKSRC" had to be removed from the PATCH_ARGS and PATCH_DIST_ARGS
  variables.  If using these variables directly, you will need to adapt the
  Makefile. For example:

    ${PATCH} ${PATCH_ARGS} < ${FILESDIR}/extra-patch

    needs to be changed to:

    ${PATCH} -d ${PATCH_WRKSRC} ${PATCH_ARGS} < ${FILESDIR}/extra-patch

20161218:
AUTHOR: tcberner@FreeBSD.org

  QT_PREFIX has been dropped, in favour of using PREFIX directly.

20160911:
AUTHOR: amdmi3@FreeBSD.org

  Support has been added for complete set of Creative Commons licenses

  CC-(BY|BY-ND|BY-NC|BY-NC-ND|BY-NC-SA|BY-SA)-(1.0|2.0|2.5|3.0|4.0)

20160909:
AUTHOR: amdmi3@FreeBSD.org

  Verbose build logs are now preferred and enabled by default for cmake,
  ninja and GNU configure.  Ports which still produce quiet build logs
  (hiding actual commands) are strongly advised to switch to verbose logs.

20160908:
AUTHOR: amdmi3@FreeBSD.org

  Support has been added for NONE license, use it when the port doesn't
  have cleanly defined licensing terms.  Note that without clean license
  allowing you to use and distribute the code it would be be illegal to do
  so in many jurisdictions, so for ports with NONE license no distfiles or
  packages are distributed.

20160824:
AUTHOR: mat@FreeBSD.org

  To complete the USE_GITHUB framework, a GH_SUBDIR variable has been added.
  It automatically moves a secondary distfile to the right place inside WRKSRC.
  It also extends the GH_TUPLE variable to make it as easy to use as possible.

  Before:
